SF-2241 Fix project name overflowing in project select
This regressed in 22995b91d83b5ffb8d9424d8c05a56a78bafcad8 (#1868)

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/app.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/app.component.scss
@@ -36,6 +36,9 @@
       // KHSV05 is one example that will cause overflow, which looks particularly bad in RTL mode because it
       // overflows to the left in a menu that is layed out in LTR.
       overflow-wrap: anywhere;
+
+      height: unset;
+      min-height: 48px;
     }
   }
 
